syntax = "proto3";

option go_package = "github.com/bloodmagesoftware/bloodmage-engine/internal/engine/level";

message Level {
  int32 width = 1;
  int32 height = 2;
  bytes collision = 3;
  bytes floor_textures = 4;
  bytes wall_textures = 5;
  bytes ceiling_textures = 6;
}